<?xml version="1.0"?>
<package format="2">
  <name>rosrobot_control</name>
  <version>0.0.0</version>
  <description>The rosrobot_control package</description>
  <maintainer email="gyoriszilvia@todo.todo">gyoriszilvia</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
